# pcl_sources

./: .gitignore
0_visualization/cloud_viewer/: cloud_viewer.cpp
0_visualization/qt_colorize_cloud/: pclviewer.cpp
0_visualization/qt_visualizer/: CMakeLists.txt  pclviewer.cpp
1_segmentation/01_planar_segmentation/: planar_segmentation.cpp
1_segmentation/02_cylinder_segmentation/: CMakeLists.txt  cylinder_segmentation.cpp
1_segmentation/03_cluster_extraction/: cluster_extraction.cpp
1_segmentation/04_region_growing_segmentation/: CMakeLists.txt  CMakeLists.txt.user.ef43d28  region_growing_segmentation.cpp
1_segmentation/05_region_growing_rgb_segmentation/: region_growing_rgb_segmentation.cpp
1_segmentation/06_min_cut_segmentation/: min_cut_segmentation.cpp
1_segmentation/07_conditional_euclidean_clustering/: conditional_euclidean_clustering.cpp
1_segmentation/11_model_outlier_removal/: model_outlier_removal.cpp
1_segmentation/12_random_sample_consensus/: random_sample_consensus.cpp
1_segmentation/planar_segmentation/: CMakeLists.txt
1_segmentation/stick_segmentation/: CMakeLists.txt  stick_segmentation.cpp
2_descriptor/01_descriptors_PFH/: 01_descriptors_PFH.cpp  main.cpp
2_descriptor/02_descriptors_FPFH/: CMakeLists.txt  main.cpp
2_descriptor/13_global_descriptors_vfh/: CMakeLists.txt  main.cpp
2_descriptor/rops_feature/: rops_feature.cpp
4_alignment/correspondence_grouping/: CMakeLists.txt  correspondence_grouping.cpp
4_alignment/vfh_recognition/: FindFLANN.cmake  (+2 more)
object_recognition/: CMakeLists.txt  pcl_multi_object_recognition.cpp
(+11 files in other folders)
